<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sng.finalproject2.ui.home.LectureFragment"
        android:label="@string/title_lecture"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_assignment"
        android:name="com.sng.finalproject2.ui.assignment.AssignmentFragment"
        android:label="@string/lecture_assignment"
        tools:layout="@layout/fragment_assignment" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.sng.finalproject2.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.sng.finalproject2.ui.overview.OverviewFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_overview" />
</navigation>
